@@ -31,8 +31,8 @@ import java.util.stream.Collectors;
 
 public class BaseRepositoryImpl<T extends VersionedEntity> extends SimpleJpaRepository<T, Long> implements VersionedEntityRepository<T> {
 
-    private EntityManager entityManager;
-    private JpaEntityInformation<T, Long> entityInformation;
+    private final EntityManager entityManager;
+    private final JpaEntityInformation<T, Long> entityInformation;
 
     public BaseRepositoryImpl(JpaEntityInformation<T, Long> entityInformation, EntityManager entityManager) {
         super(entityInformation, entityManager);
@@ -56,7 +56,7 @@ public class BaseRepositoryImpl<T extends VersionedEntity> extends SimpleJpaRepo
             query.setParameter("codeSpace", id.getCodeSpace());
         }
 
-        List<T> results = query.getResultList().stream().filter(r -> id.getType() == null || r.getType().equals(id.getType())).collect(Collectors.toList());
+        List<T> results = query.getResultList().stream().filter(r -> id.getType() == null || r.getType().equals(id.getType())).toList();
 
         if (results.size() == 1) {
             return results.get(0);
