@@ -82,7 +82,7 @@ public abstract class BaseResource<E extends VersionedEntity, D extends BaseDTO>
     }
 
     protected List<D> listAllEntities(boolean fullDetails) {
-        return getRepository().findAll().stream().map(r -> getMapper().toDTO(r, fullDetails)).collect(Collectors.toList());
+        return getRepository().findAll().stream().map(r -> getMapper().toDTO(r, fullDetails)).toList();
     }
 
     protected Response buildCreatedResponse(UriInfo uriInfo, E entity) {
